# MicroserviceExample

./: README.md  openapi.yml
server/: Dockerfile  README.md  openapi.yaml  setup.cfg
server/.openapi-generator/: FILES
server/src/openapi_server/: main.py
server/src/openapi_server/apis/: cv_api.py  cv_api_base.py
server/src/openapi_server/impl/: cv_api_impl.py
server/src/openapi_server/models/: cv_post404_response.py  cv_post_request.py
server/tests/: test_cv_api.py
src/: Dockerfile  requirements.txt  setup.py
src/.openapi-generator/: FILES
src/openapi_server/: __main__.py  app.py
src/openapi_server/controllers/: cv_controller.py  health_controller.py
src/openapi_server/models/: __init__.py  cv_get404_response.py  health_get200_response.py
src/openapi_server/openapi/: openapi.yaml
src/openapi_server/services/: auth_service.py  cv_service.py
src/openapi_server/test/: test_cv_controller.py  test_health_controller.py
ts-client/: README.md  dubhar-cv-client-0.1.0.tgz  package-lock.json  package.json
ts-client/.openapi-generator/: FILES
ts-client/docs/: CvApi.md  CvGet404Response.md  CvPost404Response.md  CvPostRequest.md
ts-client/src/: runtime.ts
ts-client/src/apis/: CvApi.ts  index.ts
ts-client/src/models/: CvGet404Response.ts  CvPost404Response.ts  CvPostRequest.ts  index.ts
