[metadata]
name = openapi_server
version = 1.0.1
description = Simple API to download a CV PDF for a person identified by first and last name.
long_description = file: README.md
keywords = OpenAPI CV Download Service
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
